--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,12 @@ input,button,textarea,button:focus,textarea:focus{
     box-shadow: 6px 6px 11px #1d3c8b, -6px -6px 11px #2854c1;
 }
 .brand-logo{
-    width:250px;
+    width:170px;
+}
+@media(min-width:767px){
+    .brand-logo{
+        width:250px;
+    } 
 }
 .img-responsive{
     max-width: 100%;
@@ -129,13 +134,24 @@ input,button,textarea,button:focus,textarea:focus{
     display: none;
     
 }
+
 .side-menu.active{
     display: block;
 }
+@media(min-width:767px){
+    .side-menu.active{
+        display: none;
+    }
 
-.side-menu .navbar-nav {
-    display: inline-block ;
 }
+.side-menu.active:after{
+    content:"";
+    position: absolute;
+    width: 100%;
+    left:0;
+    background-color: #000;
+}
+
 @media(min-width:767px){
     .navbar-main {
         margin:30px 0px;
@@ -167,7 +183,7 @@ input,button,textarea,button:focus,textarea:focus{
     font-size: 1rem;
     font-weight: 800;
 }
-@media(min-width:){
+@media(min-width:767px){
     .hero_content-box h1{
         font-size:70px;
         font-weight: 800;
@@ -616,6 +632,12 @@ font-weight: 700;
     top: 0;
     flex-direction: column;
     justify-content: center;
+    display: none;
+}
+@media(min-width:767px){
+    .testimonial-block .slick-dots{
+        display: block;
+    }
 }
 .testimonial-block .slick-dots li{
     margin:5px 0px;
