--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ input,button,textarea,button:focus,textarea:focus{
 @media(min-width:767px){
     .spin-content h2{
         font-weight: 800;
-        font-size: 50px;
+        font-size: 45px;
     }
 }
 @media(min-width:980px){
@@ -323,7 +323,10 @@ input,button,textarea,button:focus,textarea:focus{
 .spin-wheel{
     text-align: center;
     position: relative;
-    right:20px;
+}
+.spin-wheel button{
+    margin-left: auto;
+    margin-right:auto;
 }
 
 .spin-wheel figure{
@@ -340,17 +343,27 @@ input,button,textarea,button:focus,textarea:focus{
 .spin-wheel figure img{
     max-width:100%;
 }
-.spin-wheel figure:before{
-    content:'';
+.spin-wheel:before{
+    content: '';
     position: absolute;
-    left:0px;
-    right: 0px;
-    margin:0px auto;
-    background-image: url(../images/spin-cirlce-icon.png);
+    left: 0px;
+    top: 12px;
+    margin: 0px auto;
+    background-image: url(../images/spin-arrow.png);
     background-repeat: no-repeat;
-    width:75px;
-    height:75px;
+    width: 25px;
+    height: 35px;
     background-size: contain;
+    z-index: 9;
+    right: 0;
+}
+@media(min-width:550px){
+    .spin-wheel:before{
+        width: 45px;
+        height: 60px; 
+       
+         top: 23px; 
+    }
 }
 .spin-wheel figure:after{
     content:'';
@@ -366,8 +379,8 @@ input,button,textarea,button:focus,textarea:focus{
 @media(min-width:767px){
     .spin-wheel figure{
         position: absolute;
-        width: 380px;
-        height: 380px;
+        width: 400px;
+        height: 400px;
         left: 0;
         right: 0;
         margin: 0px auto;
@@ -413,6 +426,7 @@ font-weight: 700;
     transition:0.3s ease-in-out;
     -moz-transition:0.3s ease-in-out;
     -webkit-transition:0.3s ease-in-out;
+    display: none;
 }
 .box-wrap-block{
     padding:15px;
@@ -769,4 +783,12 @@ box-shadow:  4px 4px 7px #031a32,
 .footer-bottom p{
     font-size:14px;
     padding:0px 20px;
+}
+
+#canvas{
+    background:url(../images/wheel_back2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    background-position: center;
 }
