--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body{
 a,a:hover,a:focus{
     text-decoration: none;
 }
+p{
+    font-size:16px;
+}
 ul,li{
     list-style: none;
     padding: 0px;
@@ -107,6 +110,9 @@ input,button,textarea,button:focus,textarea:focus{
     color:#fff;
     font-size:10px;
 }
+.text-blue{
+    color:#154baa;
+}
 .btn-shadow{
     background: #2349a9;
     box-shadow: 6px 6px 11px #1d3c8b, -6px -6px 11px #2854c1;
@@ -142,7 +148,6 @@ input,button,textarea,button:focus,textarea:focus{
     .side-menu.active{
         display: none;
     }
-
 }
 .side-menu.active:after{
     content:"";
@@ -160,13 +165,36 @@ input,button,textarea,button:focus,textarea:focus{
 .navbar-main ul li a{
     color:#fff;
 }
+.header-element
+{
+    position:fixed;
+    width:100%;
+    z-index:999;
+}
+.header-element.sticky .header_top{
+    display: none;
+}
+.header-element.sticky .navbar-main{
+    margin:0px 0px;
+    background-color: rgba(0,0,0,0.4);
+    transition: 0.3s ease-in-out;
+}
+.header_inner{
+    background-image: url(../images/header_inner.jpg);
+    background-repeat: no-repeat;
+
+}
 .hero_element{
     background-image: url(../images/hero.jpg);
     width: 100%;
-    padding-top:0em;
-    padding-bottom: 2em;
+    padding-top: 0em;
+    padding-bottom: 6em;
     background-repeat: no-repeat;
     background-size: cover;
+    padding-top: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero_content-box{
     display: flex;
@@ -203,14 +231,23 @@ input,button,textarea,button:focus,textarea:focus{
 }
 .form-box input,.form-box select,.form-box textarea{
     border:none;
-    width:100%
+    width:100%;
+    font-size:14px;
 }
 .form-box{
     border: 1px solid #b5bdc5;
     padding: 10px;
     border-radius: 25px;
     box-shadow: 0px 0px 6px rgb(181 189 197 / 62%);
+    position: relative;
+    padding-left:30px;
 }
+.icon-form{
+    position: absolute;
+    left:10px;
+    color:#031e3b;
+}
+
 .btn-submit{
     background-color: #031e3b;
     color: #fff;
@@ -256,6 +293,7 @@ input,button,textarea,button:focus,textarea:focus{
 .bg-blue{
     background-color: #031e3b;
 }
+
 .icon-wrap{
     border-radius: 52px;
     background: #031e3b;
@@ -305,6 +343,12 @@ input,button,textarea,button:focus,textarea:focus{
     }
 }
 @media(min-width:980px){
+    .spin-content h2{
+        font-weight: 800;
+        font-size: 60px;
+    }
+}
+@media(min-width:1400px){
     .spin-content h2{
         font-weight: 800;
         font-size: 80px;
@@ -442,12 +486,14 @@ font-weight: 700;
 .box-wrap-block a{
     position: absolute;
     bottom:10px;
+    font-size:14px;
 }
 .box-wrap-heading{
     font-weight:600;
     color:#031e3b;
     font-size:20px;
     margin:10px 0px 5px 0px;
+    padding-bottom:5px;
 }
 /* .box-wrap-element:hover .box-wrap-block
 {
@@ -809,4 +855,34 @@ box-shadow:  4px 4px 7px #031a32,
 	display:none !important;
  }
  .goog-te-banner-frame.skiptranslate {
-   display: none !important;
+   display: none !important;}
+.product-image img{
+    max-width:100%;
+}
+.inner-head-banner{
+    height: 260px;
+    overflow: hidden;
+    position: relative;
+}
+.inner_list li{
+padding-bottom:10px;
+position: relative;
+padding-left:20px;
+}
+.inner_list li:before{
+    content:"";
+    position: absolute;
+    border-left:5px solid #2249a9;
+    border-top:5px solid transparent;
+    border-bottom:5px solid transparent;
+    left:0px;
+    top:5px;
+}
+.Product-update{
+    height:380px;
+}
+.form-inner button{
+    width:100%;
+    background: #2249a9;
+    color: #fff;
+}
