--- a/css/style.css
+++ b/css/style.css
@@ -59,19 +59,16 @@ input,button,textarea,button:focus,textarea:focus{
 
 .header_top{
     background-color: rgb(255 255 255 / 10%);
-    padding: 20px 0px;
 }
 .top_head_block
 {
-    display: block;
-    text-align: center;
+    display: flex;
+    align-items: center;
+
 }
 @media (min-width:767px){
-    .top_head_block
-    {
-        display: flex;
-        align-items: center;
-
+    .header_top{
+        padding: 20px 0px;
     }
 }
 .text-primary{
@@ -98,10 +95,16 @@ input,button,textarea,button:focus,textarea:focus{
     }
 }
 .top_head_block a{
-    font-size:12px;
+    font-size:10px;
+    margin-right: auto;
+}
+@media(min-width:767px){
+    .top_head_block a{
+        font-size:12px;
+    }
 }
 .top_listing{
-    padding:10px 10px;
+    padding:10px 0px;
     display:inline-block;
 }
 @media(min-width:767px){
@@ -110,17 +113,33 @@ input,button,textarea,button:focus,textarea:focus{
        
     }
 }
+.top_listing{
+    display:none;
+}
+.top_listing:last-child{
+    display:block;
+}
 .top_listing a{
     padding:10px 15px;
     color:#fff;
     font-size:10px;
+}
+@media(min-width:767px){
+    .top_listing {
+        display:block;
+    }
 }
 .text-blue{
     color:#154baa;
 }
 .btn-shadow{
     background: #2349a9;
-    box-shadow: 6px 6px 11px #1d3c8b, -6px -6px 11px #2854c1;
+
+}
+@media(min-width:767px){
+    .btn-shadow{
+        box-shadow: 6px 6px 11px #1d3c8b, -6px -6px 11px #2854c1;
+    } 
 }
 .brand-logo{
     width:170px;
@@ -196,10 +215,15 @@ input,button,textarea,button:focus,textarea:focus{
     padding-bottom: 6em;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 15%;
+    padding-top: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+@media(min-width:767px){
+    .hero_element{
+        padding-top: 15%;
+    }
 }
 .hero_content-box{
     display: flex;
@@ -898,4 +922,66 @@ padding-left:20px;
     width:100%;
     background: #2249a9;
     color: #fff;
+}
+.contact-element{
+    background-color: #fff;
+    border-radius: 40px;
+    position:relative;
+    overflow:hidden;
+    margin-top: -60px;
+    box-shadow: 10px 12px 19px 0px #e6e6e6;
+}
+.contact-img{
+    background-color:#154baa;
+    background-position: right;
+    background-size: contain;
+    position: relative;
+    overflow: hidden;
+    height:100%;
+}
+.contact-img img{
+    max-width: 100%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+}
+.contact_form{
+    padding:40px;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-direction:column;
+    height:100%;
+}
+.contact_form h2{
+    color:#154baa;
+    font-size:30px;
+}
+@media(min-width:767px){
+    .contact_form h2{
+      font-size:60px;
+    }   
+}
+.map-address ul li{
+    margin-bottom:15px;
+}
+.contact_form .icon-form i{
+color:#154baa;
+}
+.contact_form button{
+    width:100%;
+    background-color: #154baa;
+    width: 100%;
+    padding:10px 0px;
+    color:#fff;
+    border:none;
+}
+.map-box{
+    width:100%;
+    height:400px;
+}
+.map-box iframe{
+    width:100%;
+    height:100%;
 }
